# rust_metrics

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: core.rs  lib.rs  main.rs  utils.rs
src/classification/: accuracy.rs  auroc.rs  confusion_matrix.rs  f1.rs  hinge.rs  jaccard.rs  mod.rs  precision_recall.rs  stat_scores.rs
src/clustering/: mod.rs  mutual_info_score.rs
src/regression/: mae.rs  mape.rs  mod.rs  mse.rs  nrmse.rs  r2.rs
src/text/: bert.rs  bleu.rs  edit.rs  mod.rs  rouge.rs
src/utils/: general.rs  metric_aggregator.rs  mod.rs
