[package]
name = "rust_metrics"
version = "0.1.7"
edition = "2024"
description = "Incremental evaluation metrics for various machine learning pipelines."
license = "Apache-2.0"
repository = "https://github.com/shaankhosla/rust_metrics"
homepage = "https://github.com/shaankhosla/rust_metrics"
documentation = "https://docs.rs/rust_metrics"
readme = "README.md"

[dependencies]
fastembed = { version = "5.4.0", default-features = false, features = ["ort-download-binaries", "hf-hub-native-tls"] ,optional=true}


[features]
default = []
text-bert = ["fastembed"]
